--- a/.gitignore
+++ b/.gitignore
@@ -1,89 +1,111 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+*.class
 
-# C extensions
-*.so
+.DS_Store*
 
-# Distribution / packaging
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
-*.egg
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+# Package Files #
+*.jar
+*.war
+*.ear
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+/target/
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*,cover
-.hypothesis/
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
 
-# Translations
-*.mo
-*.pot
+# Eclipse Core
+.project
 
-# Django stuff:
-*.log
-local_settings.py
+# External tool builders
+.externalToolBuilders/
 
-# Flask stuff:
-instance/
-.webassets-cache
+# Locally stored "Eclipse launch configurations"
+*.launch
 
-# Scrapy stuff:
-.scrapy
+# PyDev specific (Python IDE for Eclipse)
+*.pydevproject
 
-# Sphinx documentation
-docs/_build/
+# CDT-specific (C/C++ Development Tooling)
+.cproject
 
-# PyBuilder
-target/
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
 
-# IPython Notebook
-.ipynb_checkpoints
+# Java annotation processor (APT)
+.factorypath
 
-# pyenv
-.python-version
+# PDT-specific (PHP Development Tools)
+.buildpath
 
-# celery beat schedule file
-celerybeat-schedule
+# sbteclipse plugin
+.target
 
-# dotenv
-.env
+# Tern plugin
+.tern-project
 
-# virtualenv
-venv/
-ENV/
+# TeXlipse plugin
+.texlipse
 
-# Spyder project settings
-.spyderproject
+# STS (Spring Tool Suite)
+.springBeans
 
-# Rope project settings
-.ropeproject
+# Code Recommenders
+.recommenders/
+
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+
+# User-specific stuff:
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dictionaries
+.idea/vcs.xml
+.idea/jsLibraryMappings.xml
+
+# Sensitive or high-churn files:
+.idea/dataSources.ids
+.idea/dataSources.xml
+.idea/dataSources.local.xml
+.idea/sqlDataSources.xml
+.idea/dynamic.xml
+.idea/uiDesigner.xml
+
+# Gradle:
+.idea/gradle.xml
+.idea/libraries
+
+# Mongo Explorer plugin:
+.idea/mongoSettings.xml
+
+## File-based project format:
+*.iws
+
+## Plugin-specific files:
+
+# IntelliJ
+/out/
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
