Adding delayed restarts

--- a/package/scripts/supervisord.conf
+++ b/package/scripts/supervisord.conf
@@ -1,5 +1,4 @@
 ; Kafka Supervisord configuration
-; Sample supervisor config file.
 
 [unix_http_server]
 file=/var/run/supervisor/supervisor.sock   ; (the path to the socket file)
@@ -127,7 +126,7 @@ serverurl=unix:///var/run/supervisor/supervisor.sock ; use a unix:// URL  for a 
 ; include files themselves.
 
 [program:kafka-broker]
-command=/usr/hdp/current/kafka-broker/bin/kafka-server-start.sh /usr/hdp/current/kafka-broker/config/server.properties
+command=bash -c "sleep 30s && /usr/hdp/current/kafka-broker/bin/kafka-server-start.sh /usr/hdp/current/kafka-broker/config/server.properties"
 user=kafka
 autostart=true
 autorestart=true
