--- a/package/scripts/supervisord.conf
+++ b/package/scripts/supervisord.conf
@@ -126,7 +126,7 @@ serverurl=unix:///var/run/supervisor/supervisor.sock ; use a unix:// URL  for a 
 ; include files themselves.
 
 [program:kafka-broker]
-command=bash -c "sleep 30s && /usr/hdp/current/kafka-broker/bin/kafka-server-start.sh /usr/hdp/current/kafka-broker/config/server.properties"
+command=/usr/hdp/current/kafka-broker/bin/kafka-server-start.sh /usr/hdp/current/kafka-broker/config/server.properties
 user=kafka
 autostart=true
 autorestart=true
