Fixing supervisord config

--- a/package/scripts/supervisord.conf
+++ b/package/scripts/supervisord.conf
@@ -132,6 +132,7 @@ autostart=true
 autorestart=true
 startsecs=10
 startretries=999
+stopsignal=TERM
 log_stdout=true
 log_stderr=true
 logfile=/var/log/kafka/server.log
